Changelog for mk-slave-move:

2008-08-11: version 0.9.2

   * Files downloaded directly from SVN crashed due to version information.

2008-06-02: version 0.9.1

   * Command-line parsing was removing an expected DSN (bug #1960142).
   * The slave was not stopped before CHANGE MASTER TO (bug #1960142).
   * DSNs without a port caused a crash (bug #1960142).
   * Converted to use POD for command-line options.

2008-03-16: version 0.9.0

   * Initial release.